--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,16 @@ body {
 
 }
 
-#library {
+#name {
 	font-size: 72px;
 	padding-top: 100px;
 }
 
-#library1 {
-	padding: 10px;
-}
-
-#library2 {
+#time {
 	font-size: 120px;
 	padding: 30px;
 }
 
-#library3 {
+#date {
 	font-size: 24px;
 }
